# chefu

./: .cursorrules  .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/core/: audio_processor.py  config.py  state_machine.py  timer_manager.py
backend/app/models/: recipe.py
backend/app/services/: openai_client.py  recipe_parser.py
backend/tests/: test_recipe_parser.py  test_state_machine.py
frontend/: manifest.json
frontend/static/: index.html  main.js  styles.css  vad.js
