[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chefu"
version = "0.1.2"
description = "Voice‑interactive cooking assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
websockets = "^12.0"
aiohttp = "^3.9.5"
soundfile = "^0.12.2"
numpy = "^1.26.4"
resampy = "^0.4.3"
pytest = "^8.2.0"

[tool.setuptools.package-data]
"frontend.static" = ["*"]
